# cxm_action

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
cxm_iac_crawler/: __init__.py  cli.py  compute_terraform_show.py  find_entrypoints.py  main.py  send_to_cxm.py  unnest_tf_show.py
cxm_iac_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
integrations/github/: README.md  action.yml
integrations/gitlab/: .gitlab-ci.yml  README.md
tests/: __init__.py  test_cli.py  test_compute_terraform_show.py  test_find_entrypoints.py  test_main.py  test_platform_validation.py  test_send_to_cxm.py  test_unnest_tf_show.py
