[project]
name = "cxm-iac-crawler"
version = "0.1.0"
description = "Infrastructure as Code crawler for scanning Terraform configurations"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
cxm-iac-crawler = "cxm_iac_crawler.cli:main"

[tool.setuptools]
packages = ["cxm_iac_crawler"]
